# tmk_pok3r

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.app_pok3r  Makefile.app_vortex_core  Makefile.pok3r  Makefile.pok3r_rgb  Makefile.tmk_pok3r  Makefile.tmk_pok3r_rgb  Makefile.tmk_vortex_core  Makefile.vortex_core  README.md  config.h  halconf.h  ht32f165x.cfg  led_pok3r.c  matrix_vortex_core.c  mcuconf.h  openocd.cfg
apps/: pok3r_main.c  vortex_core_app.sym  vortex_core_main.c
boards/CYKB167_D_V03/: board.h  board.mk
boards/CYKB175_V03/: board.h  board.mk
boards/VORTEX_DUAL_60/: board.c  board.h  board.mk
util/: Makefile.app_pok3r  Makefile.tmk_pok3r  Makefile.tmk_pok3r_rgb  Makefile.tmk_vortex_core  connect.jlink  flash.jlink  mass-erase.jlink  version-erase.jlink
util/jlink_flashloader/FlashLoader_HT32/: .README.md.kate-swp
